# ToC-History-API

./: .gitignore  LICENSE  README.md  docker-compose-init.yml  docker-compose.achievement.yml  docker-compose.filler-init.yml  docker-compose.filler.yml  docker-compose.history.yml  docker-compose.yml  init.sh  init_full_ubuntu.sh  pyproject.toml
project/: APIachievements.py  APIhistory.py  Dockerfile  cachetool.py  config.py  db.py  disclog.py  filler.py  main.py  models.py  requirements.txt  worker.py
project/migrations/: env.py
project/utils/: manager.py  nodes.py
